# pelancurWeb

./: LICENSE  README.md
src/: ActivityController.cpp  AssetsController.cpp  CMakeLists.txt  Controller.h  ExecController.cpp  PlasmaMenuView.cpp  PlasmaMenuView.h  RootController.cpp  RootController.h  WebServer.cpp  WebServer.h  basetemplate.qrc  main.cpp  mainwindow.cpp  mainwindow.h  pelancurWebui.rc
src/resources/pages/: main.html  submenu_tpl.html  taskbar.html
src/resources/pages/assets/: interface.css  interface.js
src/tpl_engine/: CMakeLists.txt  Template.cpp  Template.h  TemplateExprs.cpp  TemplateExprs.h  TemplateList.cpp  TemplateList.h  TemplateMap.cpp  TemplateMap.h  TemplateObject.cpp  TemplateObject.h  TemplateParserException.cpp  TemplateParserException.h  TemplateString.h
